Fixed some color contrast issues.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5100,7 +5100,7 @@ video {
 }
 
 .text-blue-500{
-  color: #848a9f;
+  color: #55556D;
 }
 
 .text-blue-600{
@@ -8271,7 +8271,7 @@ video {
 }
 
 .input-error {
-  color: #E53E3E;
+  color: #AF1818;
   font-size: 0.75rem;
 }
 
